--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,7 +13,7 @@ hwi_oauth_redirect:
  
 hwi_oauth_login:
     resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
-    prefix:   /login
+    prefix:   /demo/secured/login
  
 google_login:
     pattern: /demo/secured/login_google
