--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,7 +6,13 @@ app:
     resource: @AppBundle/Controller/
     type:     annotation
 
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
+hwi_oauth_connect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/connect.xml"
+    prefix:   /demo/secured/connect
+    
 hwi_oauth_redirect:
     resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
     prefix:   /demo/secured/connect
