--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,6 +71,11 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: main
+    user_class: Sportacus\CoreBundle\Entity\User
     
 hwi_oauth:
     firewall_name: secured_area
@@ -80,7 +85,10 @@ hwi_oauth:
             client_id:           %client_id%
             client_secret:       %client_secret% 
             scope:               "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile"           
-
-services:
-    hwi_oauth.user.provider.entity:
-        class: HWI\Bundle\OAuthBundle\Security\Core\User\OAuthUserProvider    
+    fosub:
+        # try 30 times to check if a username is available (foo, foo1, foo2 etc)
+        username_iterations: 30
+        # mapping between resource owners (see below) and properties
+        properties:
+            google: googleId
+         
