--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,7 +3,7 @@
 security:
     # http://symfony.com/doc/current/book/security.html#encoding-the-user-s-password
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        FOS\UserBundle\Model\UserInterface: sha512
 
     # http://symfony.com/doc/current/book/security.html#hierarchical-roles
     role_hierarchy:
@@ -12,6 +12,8 @@ security:
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
+        fos_userbundle:
+            id: fos_user.user_provider.username
         in_memory:
             memory:
                 users:
@@ -35,14 +37,19 @@ security:
         secured_area:
             pattern:    ^/demo/secured/
             oauth:
+                provider: fos_userbundle
                 resource_owners:
                     google: /demo/secured/login_google
                 check_path: _demo_security_check
                 login_path: /demo/secured/login
                 failure_path: /demo/secured/login
                 oauth_user_provider:
-                    service: hwi_oauth.user.provider
+                    service: my_user_provider
 
+            logout:
+                path:           /demo/secured/logout
+                target:         /demo/secured/connect #where to go after logout
+            
             # Turn on anonymous for testings need.
             anonymous: ~
 
@@ -50,4 +57,8 @@ security:
     # of your application based on roles, ip, host or methods
     # http://symfony.com/doc/current/cookbook/security/access_control.html
     access_control:
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^admin/, role: ROLE_ADMIN }
+        - { path: ^/demo/secured/hello/, roles: ROLE_USER }
