--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,9 +1,12 @@
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/book/service_container.html
 parameters:
-#    parameter_name: value
-
+    my_user_provider.class:  Sportacus\CoreBundle\Security\Core\User\UserProvider
+    
 services:
+    my_user_provider:
+        class: "%my_user_provider.class%"
+        arguments: [@fos_user.user_manager,{google: googleId}] 
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
