--- a/src/Sportacus/CoreBundle/Resources/config/routing.yml
+++ b/src/Sportacus/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 sportacus_core_homepage:
-    path:     /{name}
+    path:     /hello/{name}
     defaults: { _controller: SportacusCoreBundle:Default:index }
