--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,11 +38,26 @@ assetic:
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
-        #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
-        #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
-
+        less:
+            node: "D:\\nodejs\\node.exe"
+            node_paths: ["C:\\Users\\Appo\\AppData\\Roaming\\npm\\node_modules"]
+            apply_to: "\.less$"
+braincrafted_bootstrap:
+    less_filter: less
+    output_dir:
+    assets_dir: %kernel.root_dir%/../vendor/twbs/bootstrap
+    jquery_path: %kernel.root_dir%/../vendor/jquery/jquery/jquery-1.10.2.js
+    less_filter: less # "less", "lessphp", "sass" or "none"
+    fonts_dir: %kernel.root_dir%/../web/fonts
+    auto_configure:
+        assetic: true
+        twig: true
+        knp_menu: true
+        knp_paginator: true
+    customize:
+        variables_file: %kernel.root_dir%/../src/Sportacus/CoreBundle/Resources/public/less/build.less
+        bootstrap_output: %kernel.root_dir%/../src/Sportacus/CoreBundle/Resources/public/less/bootstrap.less
+        bootstrap_template: BraincraftedBootstrapBundle:Bootstrap:bootstrap.less.twig    
 # Doctrine Configuration
 doctrine:
     dbal:
