--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,18 @@
 			"SymfonyStandard" : "app/"
 		}
 	},
+	"repositories" : [{
+			"type" : "package",
+			"package" : {
+				"name" : "jquery/jquery",
+				"version" : "1.10.2",
+				"dist" : {
+					"url" : "http://code.jquery.com/jquery-1.10.2.js",
+					"type" : "file"
+				}
+			}
+		}
+	],
 	"require" : {
 		"php" : ">=5.3.3",
 		"symfony/symfony" : "2.6.*",
@@ -22,7 +34,10 @@
 		"sensio/framework-extra-bundle" : "~3.0",
 		"incenteev/composer-parameter-handler" : "~2.0",
 		"hwi/oauth-bundle" : "0.4.*@dev",
-		"friendsofsymfony/user-bundle" : "~2.0@dev"
+		"friendsofsymfony/user-bundle" : "~2.0@dev",
+		"braincrafted/bootstrap-bundle" : "~2.0",
+		"twbs/bootstrap" : "3.*",
+		"jquery/jquery" : "1.10.*"
 	},
 	"require-dev" : {
 		"sensio/generator-bundle" : "~2.3"
@@ -34,7 +49,8 @@
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles"
+			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles",
+			"Braincrafted\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::install"
 		],
 		"post-update-cmd" : [
 			"Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
@@ -42,7 +58,8 @@
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
 			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles"
+			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles",
+			"Braincrafted\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::install"
 		]
 	},
 	"config" : {
