--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,7 +34,8 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        
+        - SportacusCoreBundle
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
