--- a/src/Sportacus/CoreBundle/Resources/config/services.yml
+++ b/src/Sportacus/CoreBundle/Resources/config/services.yml
@@ -1,4 +1,7 @@
 services:
+      measure_collection_type:
+        class:        Sportacus\CoreBundle\Form\Type\MeasureCollectionType
+        arguments:    [doctrine]
 #    sportacus_core.example:
 #        class: Sportacus\CoreBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
