--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 		"symfony/symfony" : "2.6.*",
 		"doctrine/orm" : "~2.2,>=2.2.3",
 		"doctrine/doctrine-bundle" : "~1.2",
-		"doctrine/doctrine-fixtures-bundle": "dev-master",
+		"doctrine/doctrine-fixtures-bundle" : "dev-master",
 		"twig/extensions" : "~1.0",
 		"symfony/assetic-bundle" : "~2.3",
 		"symfony/swiftmailer-bundle" : "~2.3",
@@ -42,7 +42,8 @@
 		"symfony/var-dumper" : "3.0.*@dev"
 	},
 	"require-dev" : {
-		"sensio/generator-bundle" : "~2.3"
+		"sensio/generator-bundle" : "~2.3",
+		"phpunit/phpunit": "4.4.*"
 	},
 	"scripts" : {
 		"post-install-cmd" : [
