--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -35,20 +35,20 @@ security:
         
         # secures part of the application
         secured_area:
-            pattern:    ^/demo/secured/
+            pattern:    ^/
             oauth:
                 provider: fos_userbundle
                 resource_owners:
-                    google: /demo/secured/login_google
-                check_path: _demo_security_check
-                login_path: /demo/secured/login
-                failure_path: /demo/secured/login
+                    google: /security/login_google
+                check_path: _security_check
+                login_path: /security/login
+                failure_path: /security/login
                 oauth_user_provider:
                     service: my_user_provider
 
             logout:
-                path:           /demo/secured/logout
-                target:         /demo/secured/login #where to go after logout
+                path:           /security/logout
+                target:         /security/login #where to go after logout
             
             # Turn on anonymous for testings need.
             anonymous: ~
@@ -57,8 +57,8 @@ security:
     # of your application based on roles, ip, host or methods
     # http://symfony.com/doc/current/cookbook/security/access_control.html
     access_control:
-        - { path: ^login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^admin/, role: ROLE_ADMIN }
-        - { path: ^/demo/secured/hello/, roles: ROLE_USER }
+        - { path: ^/security/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/security/connect/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/demo/secured/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/, roles: ROLE_USER }
