--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -25,4 +25,15 @@ google_login:
     pattern: /security/login_google
  
 logout:
-    path:   /logout
+    path:   /security/logout
+    
+    
+    
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
