--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -60,5 +60,5 @@ security:
         - { path: ^/security/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/security/connect/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/demo/secured/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_USER }
         - { path: ^/, roles: ROLE_USER }
