--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,16 @@
 		"braincrafted/bootstrap-bundle" : "~2.0",
 		"twbs/bootstrap" : "3.*",
 		"jquery/jquery" : "1.10.*",
-		"symfony/var-dumper" : "3.0.*@dev"
+		"symfony/var-dumper" : "3.0.*@dev",
+		"sonata-project/admin-bundle" : "~2.3",
+		"sonata-project/doctrine-orm-admin-bundle" : "~2.3",
+		"sonata-project/intl-bundle" : "~2.2",
+		"sonata-project/formatter-bundle" : "~2.3",
+		"michelf/php-markdown" : "~1.4"
 	},
 	"require-dev" : {
 		"sensio/generator-bundle" : "~2.3",
-		"phpunit/phpunit": "4.4.*"
+		"phpunit/phpunit" : "4.4.*"
 	},
 	"scripts" : {
 		"post-install-cmd" : [
