--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@
 # Assets and user uploads
 /web/bundles/
 /web/uploads/
+/web/css/
+/web/fonts/
+/web/js/
 
 # PHPUnit
 /app/phpunit.xml
@@ -36,3 +39,7 @@
 
 # Composer PHAR
 /composer.phar
+
+#Node js
+/node_modules/
+/id
