--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,8 +40,8 @@ assetic:
     filters:
         cssrewrite: ~
         less:
-            node: "D:\\nodejs\\node.exe"
-            node_paths: ["C:\\Users\\Appo\\AppData\\Roaming\\npm\\node_modules"]
+            node: /usr/bin/node
+            node_paths: [/usr/local/lib/node_modules]
             apply_to: "\.less$"
 braincrafted_bootstrap:
     less_filter: less
@@ -98,6 +98,7 @@ hwi_oauth:
     resource_owners:
         google:
             type:          google
+            
             client_id:           %client_id%
             client_secret:       %client_secret% 
             scope:               "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile"           
